# Hyperion_Grabber_X11_QT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hgx11.cpp  hgx11.h  hgx11.service  hgx11damage.cpp  hgx11damage.h  hgx11grab.cpp  hgx11grab.h  hgx11grab.h.autosave  hgx11net.cpp  hgx11net.h  hgx11screensaver.cpp  hgx11screensaver.h  hgx11stop.service  main.cpp
